--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,18 @@ h1, h2 {
 }
 
 #main-buttons-field button {
-    background-color: aqua;
+    margin: 5px 10px;
+    padding: 10px;
+    border: 1px solid black;
+    background-color: antiquewhite;
+}
+
+#side-btn-wrapper {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
 }
