--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,20 @@ h1, h2 {
     margin: 5px 10px;
     padding: 10px;
     border: 1px solid black;
-    background-color: antiquewhite;
+    background-color: black;
 }
 
 #side-btn-wrapper {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
+
+#lab1-sidebar {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     display: flex;
