--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,10 @@ h1, h2 {
     margin: 5px 10px;
     padding: 10px;
     border: 1px solid black;
-    background-color: black;
+    background-color: antiquewhite;
 }
 
-#side-btn-wrapper {
+#sidebar {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     display: flex;
