--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,12 @@ h1, h2 {
     background-color: antiquewhite;
 }
 
-#sidebar {
-    float: left;
-    width: 200px;
-}
-
-
-
-.side_buttons {
-    display: block;
-    width: 100%;
-    text-align: left;
+#side-btn-wrapper {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
 }
