--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,13 @@ h1, h2 {
 }
 
 #side-btn-wrapper {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 500px;
+    text-align: left;
+    margin-top: 20px; 
 }
+
+.side-btn {
+    display: block;
+    width: 100%; 
+    margin-bottom: 10px; 
+}
+
